# wep-deep-research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADR.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SKILL_UPDATE_2026-01-28_sse-streaming.md  SKILL_UPDATE_2026-01-29_fastapi-openapi-export.md  SSE_STREAMING_PLAN.md  docker-compose.yml  gunicorn_conf.py  justfile  pyproject.toml
.github/workflows/: ci.yml
context/research/: deep-research-pydantic-ai-temporal-2026-01-20-deep.md
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION.md  openapi.yaml
docs/research/: gcp-cloud-run-sse-limits.md
research/: EDA.ipynb  __init__.py  agents.py  batch_runner.py  evaluation_dataset.json  evaluation_dataset.py  models.py  run_research.py  test_dataset.py
src/: __init__.py  agents.py  demo.py  events.py  exceptions.py  export_openapi.py  logging.py  models.py  server.py  workflow.py
src/research/: __init__.py  agents.py
tests/: test_agents.py  test_demo.py  test_evaluation_dataset.py  test_events.py  test_exceptions.py  test_logging.py  test_models.py  test_server.py  test_server_streaming.py  test_test_dataset.py  test_workflow.py
tests/test_research/: test_agents.py  test_exceptions.py  test_models.py
